# Social-media-agent

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  BUG_FIX_REPORT.md  CHANGELOG.md  CI-CD-SETUP-SUMMARY.md  LANGCHAIN-GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  TESTING.md  agent.py  config.py  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  test_api_config.py  test_model_router.py  test_mvp02.py  test_progress.py  test_qwen3_analysis.py  test_router_with_api.py  xiaohongshu_manager.py
.github/workflows/: agent-tests.yml  ci.yml
agents/: __init__.py  coordinator.py
agents/reviewers/: __init__.py  compliance_reviewer.py  engagement_reviewer.py  quality_reviewer.py
docs/: AI_IMAGE_GENERATION.md  API-Agents.md  API-Config.md  API-Tools.md  ARCHITECTURE.md  Architecture.md  CI-CD-Guide.md  CI-CD.md  HIGH_PRIORITY_OPTIMIZATIONS.md  IMAGE_GENERATION_FIXES.md  INTERACTIVE_MODE.md  ISSUE_ANALYSIS.md  MULTI_AGENT_REVIEW_DESIGN.md  QWEN3_MIGRATION.md  README.md  REVIEW_IMPLEMENTATION_GUIDE.md  SETUP-NOTES.md  TEST_RESULTS_ANALYSIS.md  自定义参考数量功能说明.md
examples/: batch_tasks_example.json  batch_tasks_example.txt  cache_usage_example.py  quality_review_example.py
outputs/drafts/: .gitkeep  20251102_182246_测试主题.json  20251102_234551_悉尼旅游.json  20251103_000928_悉尼旅游.json  20251103_100041_悉尼旅游.json  20251103_100204_悉尼旅游.json  20251103_100335_悉尼旅游.json  20251103_110724_测试主题.json  20251103_115106_东京旅游.json  20251103_123253_日本北海道7天旅游攻略.json
outputs/images/: .gitkeep
prompts/: content_analyst.md  content_creator.md  coordinator.md  quality_reviewer.md
scripts/: pre-push-check.sh  quick_test.bat  quick_test.sh  run-tests.sh  run_ci_tests.bat  run_ci_tests.sh  setup-dev.sh
sub_agents/: __init__.py  content_analyst.py  content_creator.py  publisher.py
tests/: README_comprehensive_test.md  __init__.py  check_available_models.py  comprehensive_test.py  smoke_test.py  test_all_models.py  test_batch_mode.py  test_cache_functionality.py  test_config.py  test_config_validation.py  test_coordinator_model.py  test_end_to_end_with_review.py  test_engagement_reviewer_agent.py  test_error_handling.py  test_image_generator.py  test_performance_monitor.py  test_performance_optimization.py  test_quality_reviewer_agent.py  test_review_tools.py  test_tools.py  test_utils.py
tools/: content_analyst.py  content_creator.py  image_generator.py  publisher.py  review_optimized.py  review_tools.py  review_tools_v1.py
utils/: __init__.py  cache_manager.py  cached_mcp_client.py  common_tools.py  draft_manager.py  error_handler.py  llm_client.py  logger_config.py  mcp_client.py  mock_data.py  model_router.py  parallel_executor.py  performance_monitor.py  response_utils.py
